--- a/views/partials/head.liquid
+++ b/views/partials/head.liquid
@@ -3,6 +3,7 @@
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     {{ person.name }}
     <link rel="stylesheet" href="styles/style.css">
+    <link rel="stylesheet" href="https://use.typekit.net/rxa8qbs.css">
   </head>
   <body>
     
