--- a/views/index.liquid
+++ b/views/index.liquid
@@ -8,10 +8,9 @@
   </div>
 
   <div class="card-back"> 
-      <button>
-            <img src="../assets/linkedin.svg" alt="icoon van linkedin">
-            <a href="www.linkedin.com/in/karima-m-ab63a11b3"></a>
-      </button>
+      <a href="www.linkedin.com/in/karima-m-ab63a11b3">
+          <img src="../assets/linkedin.svg" alt="icoon van linkedin">
+      </a>
 
       <p>{{ person.custom.properties }}</p>
       <p>{{ person.custom.email }}</p>
