--- a/views/index.liquid
+++ b/views/index.liquid
@@ -8,7 +8,7 @@
   </div>
 
   <div class="card-back"> 
-      <a href="www.linkedin.com/in/karima-m-ab63a11b3">
+      <a href="https://www.linkedin.com/in/karima-m-ab63a11b3/">
           <img src="../assets/linkedin.svg" alt="icoon van linkedin">
       </a>
 
