--- a/views/partials/head.liquid
+++ b/views/partials/head.liquid
@@ -1,10 +1,13 @@
+<!DOCTYPE html>
+<html lang="en">
 <head>
-    <meta charset="UTF-8">
-    <meta name="viewport" content="width=device-width, initial-scale=1.0">
-    {{ person.name }}
-    <link rel="stylesheet" href="styles/style.css">
-    <link rel="stylesheet" href="https://use.typekit.net/rxa8qbs.css">
-  </head>
-  <body>
+  <meta charset="UTF-8">
+  <meta name="viewport" content="width=device-width, initial-scale=1.0">
+  <title>Visitekaartje</title>
+  <link rel="stylesheet" href="styles/style.css">
+  <link rel="stylesheet" href="https://use.typekit.net/rxa8qbs.css">
+</head>
+  
+<body>
     
     
